--- a/app/views/manage/questionnaire-has/v1/site-access/neighbours-land.html
+++ b/app/views/manage/questionnaire-has/v1/site-access/neighbours-land.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Would the Inspector need access to a neighbour’s land or property?' %}
+{% set title = 'Could a neighbouring site be affected?' %}
 
 <!-- Will the reasons for refusal / grounds of appeal require the Inspector to access a neighbour’s land? -->
 
