Neighbouring site, small content update + order change

--- a/app/views/manage/questionnaire-has/v1/site-access/health-and-safety.html
+++ b/app/views/manage/questionnaire-has/v1/site-access/health-and-safety.html
@@ -27,7 +27,7 @@
   <p class="govuk-!-margin-bottom-2">For example, tell us about:</p>
   <ul class="govuk-list govuk-list--bullet">
     <li>
-      the potential for hazardous materials on site, such as asbestos
+      no or limited mobile reception
     </li>
     <li>
       if ladders or other access equipment is needed
@@ -36,7 +36,13 @@
       the need to wear high-visibility clothes or a hard hat
     </li>
     <li>
+      livestock or other animals
+    </li>
+    <li>
       blocked access to areas, for example because of debris or overgrown vegetation
+    </li>
+    <li>
+      the potential for hazardous materials on site, such as asbestos
     </li>
   </ul>
 
