--- a/app/views/manage/questionnaire-has/v1/site-access/neighbours-address.html
+++ b/app/views/manage/questionnaire-has/v1/site-access/neighbours-address.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Add their address?' %}
+{% set title = 'Add site address' %}
 
 {% block questions %}
 
