--- a/app/views/manage/questionnaire-has/v1/site-access/neighbours-contact-details.html
+++ b/app/views/manage/questionnaire-has/v1/site-access/neighbours-contact-details.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% set title = 'Add neighbours details' %}
+{% set title = 'Add contact details' %}
 
 {% block questions %}
   <!-- <span class="govuk-caption-l">
