--- a/app/views/manage/questionnaire-has/v1/site-access/neighbours.html
+++ b/app/views/manage/questionnaire-has/v1/site-access/neighbours.html
@@ -34,8 +34,7 @@
 
             {
               key: {
-                text: 'Neighbour’s details',
-                visuallyHiddenText: 'for 172, York Road, Bedminster, Bristol, BS3 4AL'
+                text: 'Site 1 details'
               },
               value: {
                 html: (data['neighbour-first-name'] or 'Sam') + ' ' + (data['neighbour-last-name'] or 'Fisher')+
@@ -53,8 +52,7 @@
             },
             {
               key: {
-                text: 'Affected neighbour',
-                visuallyHiddenText: 'at 174, York Road, Bedminster, Bristol, BS3 4AL'
+                text: 'Site 2 details'
               },
               value: {
                 html: (data['neighbour-first-name'] or 'Jan') + ' ' + (data['neighbour-last-name'] or 'Bishop')+
