--- a/app/views/manage/questionnaire-has/v1/site-access/neighbours-land-reasons.html
+++ b/app/views/manage/questionnaire-has/v1/site-access/neighbours-land-reasons.html
@@ -17,19 +17,19 @@
     },
     items: [
       {
-        value: "privacy",
+        value: "Affect outlook or privacy",
         text: "Affect outlook or privacy"
       },
       {
-        value: "surround",
+        value: "Detract from site surroundings",
         text: "Detract from site surroundings"
       },
       {
-        value: "nuisance",
+        value: "Cause a nuisance, such as noise, smells or dust",
         text: "Cause a nuisance, such as noise, smells or dust"
       },
       {
-        value: "safety",
+        value: "Affect the health or safety of neighbours",
         text: "Affect the health or safety of neighbours"
       }
     ]
