Fixing up the HAS LPAQ task list - section 4 done

--- a/app/views/manage/questionnaire-has/v1/task-list__constraints.html
+++ b/app/views/manage/questionnaire-has/v1/task-list__constraints.html
@@ -17,6 +17,7 @@
       }) }}
     {% endif %}
   </h2>
+
   {{ govukSummaryList({
     classes: 'govuk-!-margin-bottom-9',
     rows: [
@@ -64,7 +65,7 @@
             }
           ]
         }
-      } if data['listed-building'] == yes,
+      } if data['affected-listed-building-check'] == 'Yes',
 
       {
         key: {
