--- a/app/views/manage/questionnaire-has/v1/task-list__notified.html
+++ b/app/views/manage/questionnaire-has/v1/task-list__notified.html
@@ -27,21 +27,25 @@
         value: {
           html: data['notified-how'] | e | replace(',', '<br>') or 'A press advert'
         }
-        if data['notified-how-complete'] else
+        if data['notified-how'] else
         {
           html: '<span class="govuk-hint">Not started</span>'
         },
         actions: {
           items: [
+
             {
               href: 'notified/notified-how?cya=true',
               html: 'Change'
             }
-            if data['notified-how-complete'] else
+
+            if data['notified-how'] else
+
             {
               href: 'notified/notified-how',
               html: 'Answer'
             }
+
           ]
         }
       },
@@ -52,7 +56,7 @@
         value: {
           html: data['site-notice-upload'] or 'site-notice.pdf'
         }
-        if data['site-notice-upload-complete'] else
+        if data['site-notice-uploaded'] else
         {
           html: '<span class="govuk-hint">Not started</span>'
         },
@@ -62,7 +66,7 @@
               href: 'notified/site-notice-upload?cya=true',
               html: 'Change'
             }
-            if data['site-notice-upload-complete'] else
+            if data['site-notice-uploaded'] else
             {
               href: 'notified/site-notice-upload',
               html: 'Upload'
@@ -77,7 +81,7 @@
         value: {
           html: data['letters-upload'] or 'letter.pdf'
         }
-        if data['letters-upload-complete'] else
+        if data['letters-uploaded'] else
         {
           html: '<span class="govuk-hint">Not started</span>'
         },
@@ -87,7 +91,7 @@
               href: 'notified/letters-upload?cya=true',
               html: 'Change'
             }
-            if data['letters-upload-complete'] else
+            if data['letters-uploaded'] else
             {
               href: 'notified/letters-upload',
               html: 'Upload'
@@ -102,7 +106,7 @@
         value: {
           html: data['press-advert-upload'] or 'press-advert.pdf'
         }
-        if data['press-advert-upload-complete'] else
+        if data['advert-uploaded'] else
         {
           html: '<span class="govuk-hint">Not started</span>'
         },
@@ -112,7 +116,7 @@
               href: 'notified/press-advert-upload?cya=true',
               html: 'Change'
             }
-            if data['press-advert-upload-complete'] else
+            if data['advert-uploaded'] else
             {
               href: 'notified/press-advert-upload',
               html: 'Upload'
