--- a/app/views/manage/questionnaire-has/v1/appeal-process/procedure.html
+++ b/app/views/manage/questionnaire-has/v1/appeal-process/procedure.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Which procedure do you think is most appropriate for this appeal?' %}
+{% set title = 'Which procedure would you prefer?' %}
 
 {% block questions %}
   {% set inquiryDays %}
