--- a/app/views/manage/questionnaire-has/v1/notified/site-notice-upload.html
+++ b/app/views/manage/questionnaire-has/v1/notified/site-notice-upload.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Upload your site notice' %}
+{% set title = 'Upload site notice' %}
 
 {% block questions %}
   <h1 class="govuk-heading-l">
