--- a/app/views/manage/questionnaire-has/v1/appeal-process/extra-conditions.html
+++ b/app/views/manage/questionnaire-has/v1/appeal-process/extra-conditions.html
@@ -1,28 +1,43 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Suggested conditions' %}
+{% set title = 'Add new condition requests' %}
 
 {% block questions %}
   <h1 class="govuk-heading-l">
     {{ title }}
   </h1>
-  <p class="govuk-body">You need to tell us about any extra conditions you want the inspector to apply if they allow the appeal.</p>
 
-  <p class="govuk-body">If you choose to not tell us about them now, you must email <a href=:mailto:caseofficers@planninginspectorate.gov.uk">caseofficers@planninginspectorate.gov.uk</a> by {{ '6' | daysInFuture }}.</p>
+  <p class="govuk-body">
+    If you have new condition requests, add them now or email them to <a href=:mailto:caseofficers@planninginspectorate.gov.uk">caseofficers@planninginspectorate.gov.uk</a>
+  </p>
 
-  <p class="govuk-body">You do not need to tell us about standard conditions.</p>
+  <p class="govuk-body">
+    The deadline for emailed condition requests is {{ '6' | daysInFuture }}.
+  </p>
 
-  {% set standardConditions %}
-    <p class="govuk-body">The development hereby permitted shall begin not later than 3 years from the date of this decision.</p>
+  <p class="govuk-body">
+    You do not need to tell us about standard conditions.
+  </p>
 
-    <p class="govuk-body">The materials to be used in the construction of the external surfaces of the development hereby permitted shall match those used in the existing building.</p>
+  <!-- {% set standardConditions %}
+    <p class="govuk-body">
+      The development hereby permitted shall begin not later than 3 years from the date of this decision.
+    </p>
 
-    <p class="govuk-body">The development hereby permitted shall be carried out in accordance with the approved plans.</p>
+    <p class="govuk-body">
+      The materials to be used in the construction of the external surfaces of the development hereby permitted shall match those used in the existing building.
+    </p>
+
+    <p class="govuk-body">
+      The development hereby permitted shall be carried out in accordance with the approved plans.
+    </p>
+
   {% endset -%}
+
   {{ govukDetails({
     summaryHtml: 'Standard conditions',
     html: standardConditions
-  }) }}
+  }) }} -->
 
   {% set extraConditions %}
     {{ govukTextarea({
@@ -31,7 +46,7 @@
       value: data['extra-conditions'],
       rows: '3',
       label: {
-        html: 'What are your suggested conditions?'
+        html: 'Add request details'
       }
     }) }}
   {% endset -%}
@@ -40,7 +55,7 @@
     name: 'extra-conditions-check',
     fieldset: {
       legend: {
-        html: 'Do you want to tell us about any suggested conditions?',
+        html: 'Do you want to request new conditions?',
         classes: 'govuk-fieldset__legend--m'
       }
     },
