--- a/app/views/manage/questionnaire-has/v1/constraints/affected-listed-buildings.html
+++ b/app/views/manage/questionnaire-has/v1/constraints/affected-listed-buildings.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'You have added an affected listed building' %}
+{% set title = 'Listed building or site has been added to the case' %}
 
 {% set prototypeLinks = [
   {
@@ -90,7 +90,7 @@
       name: 'affected-listed-buildings',
       fieldset: {
         legend: {
-          html: 'Do you want to add any more listed buildings?',
+          html: 'Add another building or site?',
           classes: 'govuk-fieldset__legend--m',
           isPageHeading: false
         }
