--- a/app/views/manage/questionnaire-has/v1/constraints/conservation-upload.html
+++ b/app/views/manage/questionnaire-has/v1/constraints/conservation-upload.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Upload the conservation area map and guidance' %}
+{% set title = 'Upload conservation map and guidance' %}
 
 {% block questions %}
   <h1 class="govuk-heading-l">
