--- a/app/views/manage/questionnaire-has/v1/consultation/other-parties-upload.html
+++ b/app/views/manage/questionnaire-has/v1/consultation/other-parties-upload.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Upload the representations from other parties' %}
+{% set title = 'Upload representations' %}
 
 {% block questions %}
   <h1 class="govuk-heading-l">
