--- a/app/views/manage/questionnaire-has/v1/notified/letters-upload.html
+++ b/app/views/manage/questionnaire-has/v1/notified/letters-upload.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Upload your letter/email to interested parties and their addresses' %}
+{% set title = 'Upload letter to neighbours' %}
 
 {% block questions %}
   <h1 class="govuk-heading-l">
