--- a/app/views/manage/questionnaire-has/v1/notified/press-advert-upload.html
+++ b/app/views/manage/questionnaire-has/v1/notified/press-advert-upload.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Upload your press advert' %}
+{% set title = 'Upload advertisement' %}
 
 {% block questions %}
   <h1 class="govuk-heading-l">
