--- a/app/views/manage/questionnaire-has/v1/site-access/site-visibility.html
+++ b/app/views/manage/questionnaire-has/v1/site-access/site-visibility.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Can the inspector see the subject of the appeal from a public road or footpath?' %}
+{% set title = 'Might the inspector need access to the appellant's land or property?' %}
 
 {% block questions %}
   {{ govukRadios({
