HAS LPAQ updates

--- a/app/views/manage/questionnaire-has/v1/appeal-process/extra-conditions.html
+++ b/app/views/manage/questionnaire-has/v1/appeal-process/extra-conditions.html
@@ -11,9 +11,9 @@
     If you have new condition requests, add them now or email them to <a href=:mailto:caseofficers@planninginspectorate.gov.uk">caseofficers@planninginspectorate.gov.uk</a>
   </p>
 
-  <p class="govuk-body">
+  <div class="govuk-inset-text">
     The deadline for emailed condition requests is {{ '6' | daysInFuture }}.
-  </p>
+  </div>
 
   <p class="govuk-body">
     You do not need to tell us about standard conditions.
