--- a/app/views/manage/questionnaire-has/v1/constraints/affected-listed-building-details.html
+++ b/app/views/manage/questionnaire-has/v1/constraints/affected-listed-building-details.html
@@ -14,17 +14,17 @@
       Add the Historic England listed entry number for the building or site.
     </p>
 
-    <p class='govuk-body'>
-      <a href='https://historicengland.org.uk/listing/the-list/advanced-search?searchType=nhleadvancedsearch' class='govuk-link'>Search the list</a> if you do not have it.
-    </p>
+    <!-- <p class='govuk-body'>
+      <a href='https://historicengland.org.uk/listing/the-list/' target='_blank' class='govuk-link'>Search the list (opens in new tab)</a> if you do not have it.
+    </p> -->
 
     <p class='govuk-body'>
       You can add another building or site later, if needed.
     </p>
 
-    <p class='govuk-body'>
+    <!-- <p class='govuk-body'>
       A list entry number is 7 digits.
-    </p>
+    </p> -->
 
     <!-- <div id="listedplanning-hint" class="govuk-hint">
       You can add more buildings later.
@@ -32,7 +32,7 @@
 
     {{ govukInput({
       label: {
-        text: "Listed entry number"
+        text: "Add the 7 digit entry number"
       },
       classes: "govuk-input--width-10",
       id: "historicenglandsearchnumber",
