--- a/app/views/manage/questionnaire-has/v1/notified/notified-how.html
+++ b/app/views/manage/questionnaire-has/v1/notified/notified-how.html
@@ -23,9 +23,9 @@
         checked: checked('notified-how','A site notice')
       },
       {
-        html: 'Letters or email to neighbours',
-        value: 'Letters or email to neighbours',
-        checked: checked('notified-how','Letters or email to neighbours')
+        html: 'Letters to neighbours',
+        value: 'Letters to neighbours',
+        checked: checked('notified-how','Letters to neighbours')
       },
       {
         html: 'Advertisement',
