HAS LPAQ gnarly Nunjucks logic for default answers, other appeals and extra conditions

--- a/app/views/manage/questionnaire-has/v1/appeal-process/extra-conditions.html
+++ b/app/views/manage/questionnaire-has/v1/appeal-process/extra-conditions.html
@@ -71,7 +71,7 @@
       {
         html: 'No',
         value: 'No',
-        checked: checked('statement-of-case','No')
+        checked: checked('extra-conditions','No')
       }
     ]
   }) }}
