--- a/app/views/manage/questionnaire-has/v1/constraints/conservation-check.html
+++ b/app/views/manage/questionnaire-has/v1/constraints/conservation-check.html
@@ -15,22 +15,14 @@
     },
     items: [
       {
-        html: 'In a conservation area',
-        value: 'In a conservation area',
-        checked: checked('conservation-check','In a conservation area')
+        html: 'Yes',
+        value: 'Yes',
+        checked: checked('conservation-check','Yes')
       },
       {
-        html: 'Next to a conservation area',
-        value: 'Next to a conservation area',
-        checked: checked('conservation-check','Next to a conservation area')
-      },
-      {
-        divider: 'or'
-      },
-      {
-        html: 'No, it is not in or next to a conservation area',
-        value: 'Not in or next to a conservation area',
-        checked: checked('conservation-check','Not in or next to a conservation area')
+        html: 'No',
+        value: 'No',
+        checked: checked('conservation-check','No')
       }
     ]
   }) }}
