--- a/app/views/manage/questionnaire-has/v1/task-list__appeal-process.html
+++ b/app/views/manage/questionnaire-has/v1/task-list__appeal-process.html
@@ -17,6 +17,7 @@
       }) }}
     {% endif %}
   </h2>
+
   {{ govukSummaryList({
     classes: 'govuk-!-margin-bottom-9',
     rows: [
@@ -25,7 +26,8 @@
           html: 'Procedure type'
         },
         value: {
-          html: (data['procedure'] or 'Written representations')+('<br>Length:'+data['procedure-lenth'] if data['procedure'] == 'Inquiry')
+          html: (data['procedure'] or 'Written representations')+
+                ('<br>'+data['procedure-lenth']+' days' if data['procedure'] == 'Inquiry')
         }
         if data['procedure-complete'] else
         {
@@ -50,12 +52,40 @@
           html: 'Other appeals'
         },
         value: {
-          html: (data['other-appeals'] or 'No')+('<br>Reference(s):'+data['appeal-refs'] if data['other-appeals'] == 'Yes')
+          html: data['appeal-refs'] | e | replace(',', '<br>') or '0123456'
         }
         if data['other-appeals-complete'] else
         {
           html: '<span class="govuk-hint">Not started</span>'
         },
+
+        actions: {
+          items: [
+            {
+              href: 'appeal-process/other-appeals?cya=true',
+              html: 'Change'
+            }
+            if data['other-appeals-complete'] else
+            {
+              href: 'appeal-process/other-appeals',
+              html: 'Answer'
+            }
+          ]
+        }
+      }
+      if data['other-appeals-radio'] == 'Yes' else
+      {
+        key: {
+          html: 'Other appeals'
+        },
+        value: {
+          html: 'No'
+        }
+        if data['other-appeals-complete'] else
+        {
+          html: '<span class="govuk-hint">Not started</span>'
+        },
+
         actions: {
           items: [
             {
@@ -72,15 +102,16 @@
       },
       {
         key: {
-          html: 'Suggested conditions'
+          html: 'Request new conditions'
         },
         value: {
-          html: (data['extra-conditions-check'] or 'No')+('<br>Conditions:'+data['extra-conditions'] if data['extra-conditions-check'] == 'Yes')
+          html: data['extra-conditions'] or 'Some new conditions'
         }
         if data['extra-conditions-complete'] else
         {
           html: '<span class="govuk-hint">Not started</span>'
         },
+
         actions: {
           items: [
             {
@@ -95,6 +126,34 @@
           ]
         }
       }
+      if data['extra-conditions-check'] == 'Yes' else
+      {
+        key: {
+          html: 'Request new conditions'
+        },
+        value: {
+          html: 'No'
+        }
+        if data['extra-conditions-complete'] else
+        {
+          html: '<span class="govuk-hint">Not started</span>'
+        },
+
+        actions: {
+          items: [
+            {
+              href: 'appeal-process/extra-conditions?cya=true',
+              html: 'Change'
+            }
+            if data['extra-conditions-complete'] else
+            {
+              href: 'appeal-process/extra-conditions',
+              html: 'Answer'
+            }
+          ]
+        }
+      }
+
     ]
   }) }}
 </li>
