HAS LPAQ task list questions and section statuses

--- a/app/views/manage/questionnaire-has/v1/task-list__site-access.html
+++ b/app/views/manage/questionnaire-has/v1/task-list__site-access.html
@@ -20,31 +20,7 @@
   {{ govukSummaryList({
     classes: 'govuk-!-margin-bottom-9',
     rows: [
-      {
-        key: {
-          html: 'Site visibility'
-        },
-        value: {
-          html: data['site-visibility'] or 'No'
-        }
-        if data['site-visibility-complete'] else
-        {
-          html: '<span class="govuk-hint">Not started</span>'
-        },
-        actions: {
-          items: [
-            {
-              href: 'site-access/site-visibility?cya=true',
-              html: 'Change'
-            }
-            if data['site-visibility-complete'] else
-            {
-              href: 'site-access/site-visibility',
-              html: 'Answer'
-            }
-          ]
-        }
-      },
+
       {
         key: {
           html: 'Inspector access'
@@ -77,7 +53,7 @@
         value: {
           html: 'Yes' if data['neighbours-land'] == 'Yes' else 'No'
         }
-        if data['neighbours-land'] else
+        if data['neighbours-land-checked'] else
         {
           html: '<span class="govuk-hint">Not started</span>'
         },
@@ -87,7 +63,7 @@
               href: 'site-access/neighbours-land?cya=true',
               html: 'Change'
             }
-            if data['neighbours-land'] else
+            if data['neighbours-land-checked'] else
             {
               href: 'site-access/neighbours-land',
               html: 'Answer'
