--- a/app/views/manage/questionnaire-has/v1/site-access/neighbours.html
+++ b/app/views/manage/questionnaire-has/v1/site-access/neighbours.html
@@ -105,4 +105,10 @@
 
   </form>
 
+  <p class="govuk-body">
+    <a href="../task-list" class="govuk-link--no-visited-state">
+      Return to questionnaire homepage
+    </a>
+  </p>
+
 {% endblock %}
