--- a/app/views/manage/questionnaire-has/v1/task-list__site-access.html
+++ b/app/views/manage/questionnaire-has/v1/task-list__site-access.html
@@ -26,7 +26,7 @@
           html: 'Inspector access'
         },
         value: {
-          html: 'Yes<br>'+data['site-entry__details'] if data['site-entry'] == 'Yes' else 'No'
+          html: 'Yes' if data['site-entry'] == 'Yes' else 'No'
         }
         if data['site-entry-complete'] else
         {
@@ -53,7 +53,7 @@
         value: {
           html: 'Yes' if data['neighbours-land'] == 'Yes' else 'No'
         }
-        if data['neighbours-land-checked'] else
+        if data['neighbours-land-complete'] else
         {
           html: '<span class="govuk-hint">Not started</span>'
         },
@@ -63,7 +63,7 @@
               href: 'site-access/neighbours-land?cya=true',
               html: 'Change'
             }
-            if data['neighbours-land-checked'] else
+            if data['neighbours-land-complete'] else
             {
               href: 'site-access/neighbours-land',
               html: 'Answer'
@@ -78,39 +78,20 @@
         },
         value: {
           html: 'Affect outlook or privacy<br>Detract from site surroundings'
-        },
-        actions: {
-          items: [
-            {
-              href: 'site-access/site-entry?cya=true',
-              html: 'Change'
-            }
-          ]
         }
-      } if data['neighbours-land'] == 'Yes',
-
-      {
-        key: {
-          html: 'Neighbouring site address and contact'
+        if data['neighbours-reasons-complete'] else
+        {
+          html: '<span class="govuk-hint">Not started</span>'
         },
-        value: {
-          html: ('Sam Fisher')+
-                ('<br>01179123456')+
-                ('<br>172, York Road')+
-                ('<br>'+data['neighbours-address-line-2'] if data['neighbours-address-line-2'])+
-                ('<br>'+(data['neighbours-address-town'] or 'Bristol'))+
-                ('<br>'+(data['neighbours-address-postcode'] or 'BS3 4AL'))
-        },
-
         actions: {
           items: [
             {
-              href: 'site-access/neighbours-land?cya=true',
+              href: 'site-access/neighbours-land-reasons?cya=true',
               html: 'Change'
             }
-            if data['site-entry-complete'] else
+            if data['neighbours-reasons-complete'] else
             {
-              href: 'site-access/neighbours-land',
+              href: 'site-access/neighbours-land-reasons',
               html: 'Answer'
             }
           ]
@@ -119,10 +100,62 @@
 
       {
         key: {
+          html: 'Neighbouring site 1 address'
+        },
+        value: {
+          html: ('172, York Road')+
+                ('<br>'+data['neighbours-address-line-2'] if data['neighbours-address-line-2'])+
+                ('<br>'+(data['neighbours-address-town'] or 'Bristol'))+
+                ('<br>'+(data['neighbours-address-postcode'] or 'BS3 4AL'))
+        } if data['neighbours-address-complete'] else
+        {
+          html: '<span class="govuk-hint">Not started</span>'
+        },
+        actions: {
+          items: [
+            {
+              href: 'site-access/neighbours-address?cya=true',
+              html: 'Change'
+            }
+            if data['neighbours-address-complete'] else
+            {
+              href: 'site-access/neighbours-address',
+              html: 'Answer'
+            }
+          ]
+        }
+      } if data['neighbours-land'] == 'Yes',
+      {
+        key: {
+          html: 'Neighbouring site 1 contact'
+        },
+        value: {
+          html: ('Sam Fisher')+
+                ('<br>01179123456')
+        } if data['neighbours-contact-complete'] else
+        {
+          html: '<span class="govuk-hint">Not started</span>'
+        },
+        actions: {
+          items: [
+            {
+              href: 'site-access/neighbours-contact-details?cya=true',
+              html: 'Change'
+            }
+            if data['neighbours-contact-complete'] else
+            {
+              href: 'site-access/neighbours-contact-details',
+              html: 'Answer'
+            }
+          ]
+        }
+      } if data['neighbours-land'] == 'Yes',
+      {
+        key: {
           html: 'Potential safety risks'
         },
         value: {
-          html: 'Yes<br>'+data['health-and-safety__details'] if data['health-and-safety'] == 'Yes' else 'No'
+          html: 'Yes<br>'+(data['health-and-safety__details'] or 'Dogs on site') if data['health-and-safety'] == 'Yes' else 'No'
         }
         if data['health-and-safety-complete'] else
         {
