HAS LPAQ updates after CO review

--- a/app/views/manage/questionnaire-has/index.html
+++ b/app/views/manage/questionnaire-has/index.html
@@ -21,6 +21,31 @@
       {{ title }}
     </h1>
 
+    <section class="govuk-!-margin-bottom-6">
+      {% set version = "2" %}
+      <h2 class="govuk-heading-m">
+        Version {{version}}
+        {{ govukTag({
+          classes: 'govuk-tag--yellow govuk-!-margin-left-2',
+          text: 'In progress'
+        }) }}
+      </h2>
+
+      <p class="govuk-!-margin-bottom-2">Changes:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          Updates following review with Case Officers
+        </li>
+      </ul>
+
+      {{ govukButton({
+        html: 'View prototype',
+        href: 'v'+version+'/task-list',
+        isStartButton: true
+      }) }}
+
+    </section>
+
     {% set version = "1" %}
     <h2 class="govuk-heading-m">
       Version {{version}}
